--- a/nosotros.html
+++ b/nosotros.html
@@ -294,13 +294,13 @@
             </div>
             <div class="mb-3">
                 <label for="exampleInputPassword1" class="form-label">Mensaje</label>
-                <input type="password" class="form-control" id="exampleInputPassword1">
+                <input type="text" class="form-control" id="exampleInputText1">
             </div>
             <div class="mb-3 form-check">
                 <input type="checkbox" class="form-check-input" id="exampleCheck1">
                 <label class="form-check-label" for="exampleCheck1">Acepto Terminos y Condiciones</label>
             </div>
-            <button type="submit" class="btn btn-primary">Enviar</button>
+            <button type="submit" class="btn btn-primary" id="boton">Enviar</button>
         </form>
     </main>
 
@@ -324,6 +324,8 @@
             <p>Copyright &copy LivesInBooks </p>
         </div>
     </footer>
+
+    <script src="./my.scripts/main.js"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
