--- a/mangas.html
+++ b/mangas.html
@@ -8,6 +8,8 @@
     <meta name="keyword" content="libros, literatura, librería, magas, anime, acción, lectura">
     <meta name="description" content="Encontrá tus mangas favoritos en nuestra tienda online y locales- LiveInBooks">
     <link rel="shortcut icon" href="./img/imagenlogo.jpg">
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/style.css">
@@ -347,7 +349,7 @@
                 <h3 class="itemCartTotal">Total: 0</h3>
             </div>
             <div class="col d-flex justify-content-end boton">
-                <button class="btn btn-success">COMPRAR</button>
+                <button class="btn btn-success boton-comprar">COMPRAR</button>
             </div>
         </div>
     </main>
